<resources>
    <string name="app_name">跑步钱进</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home_page"> 首页</string>
    <string name="friend_circle">社群</string>
    <string name="forgot_pwd2">忘记密码</string>
    <string name="bind_phone_num">绑定手机号</string>
    <string name="try_ones">榜单</string>
    <string name="login_account">账号登录</string>
    <string name="login_phoneNum">请输入手机号码</string>
    <string name="friend_code">请输入您的邀请码</string>
    <string name="logine_phone_or_num">请输入手机号码/跑步钱进号</string>
    <string name="login_phonePwd">请输入8-16位密码</string>
    <string name="new_phonePwd">请输入8-16位密码</string>
    <string name="identifying_code">请输入验证码</string>
    <string name="recive_indetitying_code">获取验证码</string>
    <string name="owner_center">我的</string>
    <string name="message_a">把本该给孩子和老人的赡养费充值到他们的账户里，</string>
    <string name="message_b">把本该给员工的福利充值到他们的账户里，把本该给子侄和亲朋好友的红包充值到账户里</string>
    <string name="message_c">没有额外多花一分钱，瓤大家动起来，多收益了一道世界上最好的运动</string>
    <string name="message_d">跑步钱进，为了孩子和老人，福泽惠及全人类</string>
    <string name="message_e">纯公益的事情，用微小的金钱游戏，没有人多花一分钱，每个人都得到了健康</string>
    <string name="message_f">跑步钱进，您每天的运动伴侣，全球计步运动领导品牌</string>
    <string name="share_honor">分享</string>
    <string name="today_added_meoney">当天钱进</string>
    <string name="total_added_money">累计钱进</string>
    <string name="today_add_num">%$.3f元</string>
    <string name="total_add_num">%$.3f元</string>
    <string name="other_login_style">其他方式登录</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">电话</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注 册</string>
    <string name="forgotpwd_ok">确 定</string>
    <string name="bind_phone">确定</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="register">立即注册</string>
    <string name="other_login">第三方登录</string>
    <string name="newRegister">新用户注册</string>
    <string name="action_sign_in_short">登 录</string>
    <string name="action_sign_in_reg">注册</string>
    <string name="error_invalid_email">电话号码无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="desc_login">全球计步运动领导品牌</string>
    <string name="desc_sign">为了孩子和老人福泽及全人类</string>
    <string name="user_read">我已认真阅读《跑步钱进服务协议》</string>
    <string name="mu_biao">目标</string>
    <string name="member_number">"成员%1d人"</string>
    <string name="member_total">"共%1d人"</string>
    <string name="total_step">%1d步</string>
    <string name="total_money">%$.2元</string>
    <string name="target_step">目标步数 %1d步</string>
    <string name="circle_total">社群余额:%.2f元</string>
    <string name="near_by_step">当天健步%1d步</string>
    <string name="near_by_distance">%.0fm</string>
    <string name="total_income">总金额%.2f元</string>
    <string name="today_income">¥%.2f</string>
    <string name="month_income">¥%.2f</string>
    <string name="pay_money">%.2f</string>
    <string name="user_target">%1d步</string>
    <string name="step_dollar">%ld步币</string>
    <string name="invite_code">我的邀请码:%ld</string>
    <string name="invite_msg">成功邀请%d人，获得步币%d块</string>
    <string name="invite_dan_msg">邀请了%d个好友</string>
    <string name="invite_red_pkg">获得步币%d个，人民币%.2f元</string>
    <string name="invite_dan_rank">第%d名</string>
    <string name="task_days">任务天数: %d 天</string>
    <string name="target_money">奖励总金额: %.2f 元</string>
    <string name="target_step_dollor">奖励总步币:%d</string>
    <string name="task_step_release">目标步数: %d 步</string>
    <string name="task_finish_days">达标天数: %d天</string>
    <string name="total_step_dan">当前累计步数%d步</string>
    <string name="beat_nums">打败了%.2f%%的用户</string>
    <string name="steps_should_add_to">累计里程达到%d步</string>
    <string name="people_finished">%d人已完成</string>
    <string name="percent">%.0f%%</string>
    <string name="like_people">%d人赞过</string>
    <string name="add_friend">已经添加%d位好友</string>
    <string name="setting">设置</string>
    <string name="resume">继续</string>
    <string name="cancel">取消</string>
    <string name="ok">好</string>
    <string name="no">不</string>
    <string name="permission_camera">相机</string>
    <string name="permission_contact">联系人</string>
    <string name="permission_location">位置</string>
    <string name="permission_calendar">日历</string>
    <string name="permission_microphone">麦克风</string>
    <string name="permission_storage">存储</string>
    <string name="permission_phone">电话</string>
    <string name="permission_sensors">身体传感器</string>
    <string name="permission_sms">短信</string>
    <string name="successfully">成功</string>
    <string name="failure">失败</string>
    <string name="title_dialog">提示</string>
    <string name="message_permission_rationale">允许以下权限以便程序继续执行：\n\n%1$s</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>
    <string name="permission_setting">权限设置</string>
    <string name="Year">年</string>
    <string name="Month">月</string>
    <string name="Day">日</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_uitets">UitetsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="confirm">确认</string>
    <string name="target_desc">根据国家卫生部门指导建议，系统为您设置每日目标步数，10周岁以下5000步，10至60周岁以内10000步，60周岁以上5000步。</string>
    <string name="title_activity_sponsor_date">SponsorDateActivity</string>
    <string name="red_pkg_error_nopk">很遗憾，您周边没有商家派发红包</string>
    <string name="un_match_obj">未达标，还需继续努力哦!</string>
    <string name="too_slow">手慢了，商家红包已领完</string>
    <string name="tip_title">提示</string>
    <string name="confirm_yes">确定</string>
    <string name="cancel_no">取消</string>
    <string name="wallet_pay_confirm">确定使用钱包支付?</string>
    <string name="invite_string">①软件初期，我们将从受邀者获得的商家红包中抽取微量部分作为邀请者的奖励，普通用户邀请新用户一个奖励上限30元。\n②由于每次都是微量抽取，且奖励是分批次积累，奖励金额的到账时间与多少由受邀者领取商家红包的时间和多少决定，奖够为止。</string>
    <string name="title_activity_sponsor_tmap">SponsorTMapActivity</string>
    <string name="per_x_x_txt">%1$s/%2$s字</string>
    <string name="had_bind">已绑定账号</string>
    <string name="not_bind">尚未绑定</string>
    <string name="circle_have_enouth_money">社群余额不足，无法支付今日红包，请及时充值！</string>
    <string name="can_crash">钱包余额：%.2f</string>
    <string name="distance_format">%.2f</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="calculate_person_send_rbag">%1$s元 = %2$s元/%3$s天/%4$s人</string>
    <string name="money_delay">余额不足充值失败</string>
    <string name="invite_nums">成功邀请（人）</string>
    <string name="money_invite">人民币（元）</string>
    <string name="invite_step_dollor">步币（个）</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="useinfo_setting">快去完善个人资料吧,完善个人资料后可以免费抢更多商家任务红包,不容错过。</string>
    <string name="useinfo_setting_title">新加入的用户，您好</string>
    <string name="fit_info">去完善</string>
    <string name="no_buess_pkg">手慢了亲！推荐更多商家免费打广告，抢红包的机率更多哟!</string>
    <string name="identify_tips">根据国家监控政策，你需要完成实名验证才能使用充值、转账，红包等功能!</string>
    <string name="bind_card_tips">根据国家监控政策，你需要完成实名验证才能使用充值、转账，红包等功能，跑步钱进将严格保护你的信息和资金安全</string>
    <string name="tips_title">温馨提示：</string>
    <string name="next_step">下一步</string>
    <string name="default_text">--</string>
    <string name="title_code_already_send">验证码已发送至手机：</string>
    <string name="red_finish">您已领完商家红包</string>
    <string name="error_red">开小差了，请稍后再试</string>
    <string name="slow_text">一大波快手在0.1秒前已抢完</string>
    <string name="put_in_wallet">已存入我的钱包</string>
    <string name="get_red">恭喜您获得</string>
    <string name="add_card">添加银行卡</string>
    <string name="transfer_limite_tips">1、综合部分用户反映手续费问题，经研究决定，以后提现，首次提现满10元即可，每天一次。
        \n2、第二次提现有五十元、一百元两个档次自选，再次提现要经常使用软件鼓励身边亲朋好友走路跑步，运动健康，达到软件鼓励全民运动的宗旨和目的。
     </string>
    <string name="transfer_limite_tip_part2">\n3、为了保障广大用户资金的安全,发起提现后将在申请后的24小时内提现到用户的银行卡中,请耐心等待,以此带来的不便请谅解。谢谢!</string>
    <string name="suggest_content">跑步钱进是一个以帮助孩子、大人、老人远离手机游戏，鼓励大家多走路多运动为目地的软件，这是一群深具人本情怀和春秋大义的中国人用传统智慧开创的利国利民的事业。我们开创了从此以后免费打广告的模式，商家的生意更好做一些。从此以后，每个人走走路，跑跑步就可以赚到钱。 \n你也可以通过她免费鼓励您的孩子、家人、亲朋好友，这是一个百利而无一害的好事业。 \n但是我们深知自己水平有限，一定有很多不完善的地方，需要您的智慧和提醒，您的任何建议我们都会铭记！您的任何帮助都在推动我们进步！您的卓越的建议不但会让我们铭刻在心，还会给予实际的红包奖励。我们开发团队的全体同仁再次向您致敬，感谢您的关注和支持！</string>
    <string name="error_param">参数有误-100</string>
    <string name="bank_card_phone_num_tips">银行预留手机号是在银行办卡时填写的手机号，若遗忘、换号可联系银行客服电话处理</string>
    <string name="i_know">知道了</string>
    <string name="phone_desc">手机号说明</string>
    <string name="finish">完成</string>
    <string name="apply_suc">申请成功</string>
    <string name="apply_fal">申请失败</string>
    <string name="transfer_do_by_3_day">我们将在24小时内处理您的提现申请</string>
    <string name="have_no_bank">还没添加银行卡</string>
    <string name="transfer_protcol">《提现协议》</string>
    <string name="user_protcol">《用户协议》</string>
    <string name="pay_pass_reset_idtify">请输入支付密码,以验证身份</string>
    <string name="pay_pass_reset_title">修改密码</string>
    <string name="pay_pass_title_first">设置支付密码</string>
    <string name="pay_des_first">请设置钱包支付密码，用于支付验证。</string>
    <string name="pay_pass_try_again">请再次填写以确认</string>
    <string name="change_circle_banner">更换社群背景图</string>
    <string name="backgroup_image">背景图</string>
    <string name="save">保存</string>
    <string name="no_read_message">"···"</string>
    <string name="no_step">跑步钱进APP的步数不走时？</string>
    <string name="more_question">"添加客服微信号:runmanQin了解更多产品使用上的问题，关注下面公众号，截图保存下来，打开微信扫一扫二维码，关注即可查看跑步钱进APP更多操作说明。"</string>
    <string name="android_step">"因为安卓系统的特殊性，当天卸载APP后再重新下载APP打开，步数位0。"</string>
    <string name="recharge_help">"充值或购买时，一直打不开充值页面？"</string>
    <string name="recharge_help_des">"1.当前连接的网络不稳定，或者充值频繁导致。建议您可以更换其它网络，过一会重启APP再试一下。"</string>
    <string name="accout_help">QQ号与微信解绑问题</string>
    <string name="accout_help_desc">"为了保障您的账户的安全及使用，目前同一个手机号只能绑定一个微信号和QQ号。"</string>
    <string name="accout_help_detail">注意：甶于公司业务调整，2018-07-01前分别用微信号、QQ号和手机号同时注册了两个账户（微信注册登录未绑定手机号的、再用手机号注册的分别为两个账户），暂时不支持解绑微信和QQ号，敬请谅解！</string>
    <string name="friend_help">"怎么让好友变成是自己邀请的好友？"</string>
    <string name="friend_help_des">"1.打开APP，进入到我的个人中心\n【邀请好友】->【填写邀请码】->【输入你的跑步钱进号】"</string>
    <string name="step_help_des">打开首页-【点击步数】-【设置自启动或添加到白名单】-【打开跑步钱进所有权限】。\n注意:因为安卓手机的特殊性,如果点击【设置自启动或添加到白名单】未跳转到权限管理页面,请打开手机设置找到跑步前进APP打开所有权限。</string>
    <string name="aply_to_golden">申请金牌会员</string>
    <string name="aply_to_free">申请免费试用</string>
    <string name="day_congratulate">恭喜您第%d天获得</string>
    <string name="day_reg_red_des">鼓励身边多走多动一起领红包\n邀请一个陆续会得到30元的奖励</string>
    <string name="day_step_dollar">%d步币</string>
    <string name="golden_des_top">\u3000\u3000公司针对信誉好、店面大、品质优良的正规商家，</string>
    <string name="golden_des_top_part">发放少量金牌会员名额，一年只需365元，即可换取价值万元大礼包。</string>
    <string name="golden_gift_one">面向APP近百万用户展示广告，价值5000元。</string>
    <string name="golden_gift_two">免费向附近三十万人发消费红包，免费发代金券，可谓是引流神器，价值3999元。</string>
    <string name="more_momey_des_tile">推荐更多商家打广告，每天红包抢到手软</string>
    <string name="more_momey_des_one">1. 每天跑步达标即可领取商家红包、社群红包、个人红包。在我的钱包中进行查看收益，可提现到银行卡。</string>
    <string name="more_money_des_two">2. 邀请一名好友成功注册，100步币➕30元奖励，推广的人办理了金牌会员有3%的奖励，升级为合伙人还有更多的收益。我们将从受邀者获得的商家红包中抽取微量部分作为邀请者的奖励，上限30元，奖够为止。</string>
    <string name="more_money_des_three">3. 加入公司成为代理商后，代理商开拓的广告业务，享有高额提成收益和更多权益。</string>
    <string name="more_money_des_four">4. 成功介绍身边商家成为商家金牌会员后，享有部分提成，更多惊喜等你来加入。</string>
    <string name="more_moeny_des_fiv">更多赚钱攻略详情请添加公司客服进行咨询 </string>
    <string name="select_circle4_friends">给社群选择一个分类吧,方便找到更多兴趣相投的圈友</string>
    <string name="please_select_shop_circle">想推广自家商品信息,请选择商户圈哦,获取更多曝光机会!</string>
</resources>