<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paobuqianjin.pbq.step.CircleTypeActivity">


    <include layout="@layout/bar_return_a_style" />

    <TextView
        android:id="@+id/t1"
        android:layout_below="@+id/rl_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/color_5a5a5a"
        android:text="@string/select_circle4_friends" />
    <TextView
        android:id="@+id/t2"
        android:layout_below="@id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="12sp"
        android:textColor="@color/color_9e9e9e"
        android:text="@string/please_select_shop_circle" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/create_button"
        android:stateListAnimator="@null"
        android:text="@string/confirm_yes"
        android:layout_alignParentBottom="true"
        android:textColor="@color/color_fefefe"
        android:textSize="16dp" />

    <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
        android:id="@+id/rv_type"
        android:layout_below="@id/t2"
        android:layout_above="@id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="GridLayoutManager"
        tools:listitem="@layout/item_circle_type" />


</RelativeLayout>
