<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="onTabLogin"
            android:layout_marginStart="14dp"
            android:background="@mipmap/back"
            />

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/text_title_forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/bind_phone_num"
        android:textColor="#161727"
        android:textSize="24dp" />

    <LinearLayout
        android:id="@+id/ll_bind_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="160dp"
        android:orientation="vertical"


        >

        <EditText
            android:id="@+id/bind_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_sccounty"
            android:hint="@string/login_phoneNum"
            android:layout_marginTop="20dp"
            android:onClick="onTabLogin"
            android:background="@null"
            android:textSize="14dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#d9d9d9" />

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/bind_indntifying_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/identifying_code"
                android:hint="@string/identifying_code"
                android:singleLine="true"
                android:onClick="onTabLogin"
                android:textSize="14dp" />

            <Button
                android:id="@+id/bind_getCode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:onClick="onTabLogin"
                android:background="@drawable/btn_selector"
                android:text="@string/recive_indetitying_code"
                android:layout_marginTop="10dp"
                android:textSize="14dp"
                android:textColor="#ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/bind_getCode"
                android:background="#d9d9d9" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/bind_pwd"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/login_pwd"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:onClick="onTabLogin"
                android:hint="@string/new_phonePwd"
                android:textSize="14dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/bind_pwd"
                android:background="#d9d9d9" />

            <ImageView
                android:id="@+id/bind_eyes"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:onClick="onTabLogin"
                android:layout_alignParentRight="true"
                android:src="@drawable/register_eyes"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/bind_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:text="@string/forgotpwd_ok"
            android:onClick="onTabLogin"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:textSize="18dp" />

    </LinearLayout>


</RelativeLayout>
