<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/bar_return_a_style"></include>

    <com.paobuqianjin.pbq.step.view.base.view.BounceScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/more_money" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_gravity="bottom"
                    android:background="#80000000"
                    android:gravity="center_vertical"
                    android:paddingLeft="14dp"
                    android:text="@string/more_momey_des_tile"
                    android:textColor="@color/color_f8"
                    android:textSize="15dp" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="21dp"
                android:text="@string/more_momey_des_one"
                android:textColor="@color/color_161727"
                android:textSize="14dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="17dp"
                android:text="@string/more_money_des_two"
                android:textColor="@color/color_161727"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="17dp"
                android:text="@string/more_money_des_three"
                android:textColor="@color/color_161727"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="17dp"
                android:text="@string/more_money_des_four"
                android:textColor="@color/color_161727"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="66dp"
                android:text="@string/more_moeny_des_fiv"
                android:textColor="#666666"
                android:textSize="14dp" />

            <LinearLayout
                android:id="@+id/wexin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="56dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="客服微信号:pbqj123456"
                    android:textColor="#666666"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="复制"
                    android:textColor="@color/color_161727"
                    android:textSize="14dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginTop="18dp"
                android:scaleType="centerInside"
                android:src="@drawable/kefu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="微信二维码"
                android:textColor="@color/color_161727"
                android:textSize="14dp" />
        </LinearLayout>
    </com.paobuqianjin.pbq.step.view.base.view.BounceScrollView>
</LinearLayout>