<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_login_sign"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_account_login_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/login_account"
        android:textColor="#161727"
        android:textSize="24dp" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_account_login_"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="71dp"
        android:orientation="vertical">
        <!--   android:drawableLeft="@drawable/login_sccounty"-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_account_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/login_sccounty" />

            <EditText
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/login_account_img"
                android:background="@null"
                android:drawablePadding="15dp"
                android:hint="@string/login_phoneNum"
                android:singleLine="true"
                android:textSize="14dp" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/login_account"
                android:layout_marginTop="11dp"
                android:background="#d9d9d9" />
        </RelativeLayout>
        <!-- android:drawableLeft="@drawable/login_pwd"-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/login_pwd_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/login_pwd" />

            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/login_pwd_img"
                android:background="@null"
                android:drawablePadding="15dp"
                android:hint="@string/login_phonePwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14dp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/login_pwd"
                android:layout_marginTop="11dp"
                android:background="#d9d9d9" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/change_color_btn"
            android:enabled="false"
            android:onClick="onTabLogSign"
            android:stateListAnimator="@null"
            android:text="@string/action_sign_in_short"
            android:textColor="#ffffff"
            android:textSize="18dp" />

        <RelativeLayout
            android:id="@+id/ll_forgot_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp">

            <TextView
                android:id="@+id/forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onTabLogin"
                android:paddingLeft="20dp"
                android:text="@string/forgot_pwd"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="onTabLogSign"
                android:paddingRight="20dp"
                android:text="@string/register"
                android:textSize="14dp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_weiqq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center">


        <ImageView
            android:id="@+id/login_weixin"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_weixin"
            android:onClick="onClickTab" />

        <ImageView
            android:id="@+id/login_qq"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/login_weixin"
            android:background="@drawable/login_qq"
            android:onClick="onClickTab" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/rl_weiqq"
        android:gravity="center">

        <TextView
            android:id="@+id/other_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_login"
            android:textColor="#8a8a8a"
            android:textSize="12dp" />
    </RelativeLayout>

</RelativeLayout>
